2007-06-03 [wwp]	2.9.2cvs28

	* src/prefs_account.c
	* src/gtk/prefswindow.c
	* src/gtk/prefswindow.h
		Added a way to force preloading of all pages
		(prefswindow).
		Moved tabs to pages in account prefs.

2007-06-02 [colin]	2.9.2cvs27

	* src/addressbook.c
		Fix possible crash, fix ldap write bugs
	* src/ldapupdate.c
		Fix ldap write bugs - patch by Michael
		Rasmussen
	* src/alertpanel.c
	* src/alertpanel.h
		Add a hook whenever alertpanel opens/closes

2007-05-31 [wwp]	2.9.2cvs26

	* src/prefs_compose_writing.c
	* src/prefs_quote.c
		Re-organized writing options a bit:
		 - renamed the Quoting page to Templates
		 - moved all composing templates to that page
		 - moved non-templates options to the Writing one,
		   grouped reply-related options, reordered reply and
		   forward options.

2007-05-31 [wwp]	2.9.2cvs25

	* src/compose.c
		Removed unused code.

2007-05-31 [colin]	2.9.2cvs24

	* src/addressbook.c
		Fix missing display name when modifying
		LDAP. Patch by Michael Rasmussen

2007-05-31 [wwp]	2.9.2cvs23

	* src/plugins/bogofilter/Makefile.am
	* src/plugins/clamav/Makefile.am
	* src/plugins/demo/Makefile.am
	* src/plugins/dillo_viewer/Makefile.am
	* src/plugins/spamassassin/Makefile.am
		Fix building of those plugins in Mac OS X.

2007-05-30 [wwp]	2.9.2cvs22

	* src/gtk/quicksearch.c
		Fix missing initialization.

2007-05-30 [wwp]	2.9.2cvs21

	* src/procheader.c
		Revert accidental commit (debug outputs).

2007-05-30 [wwp]	2.9.2cvs20

	* src/compose.c
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/prefs_account.c
	* src/prefs_account.h
	* src/prefs_folder_item.c
	* src/prefs_gtk.c
	* src/prefs_gtk.h
		Implemented per-account and per-folder
		compose/reply/forward formats.

2007-05-30 [wwp]	2.9.2cvs19

	* src/prefs_compose_writing.c
	* src/prefs_quote.c
	* src/procheader.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		Internal API changes (factorize quote format
		prefs and checks).

2007-05-30 [colin]	2.9.2cvs18

	* src/compose.c